Initial product paging and filtering added
